--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -4,10 +4,10 @@
             margin: 0;
             margin-left: 0;
             gap: 30px;
-            display: flex;
+            // display: flex;
             flex-wrap: wrap;
         }
-    display: flex;
+    // display: flex;
     flex-wrap: wrap;
     gap: var(--cadr-gap);
 }
@@ -15,4 +15,16 @@
 .card-item {
    
     flex-basis: calc((100% - (var(--card-item) - 1) * var(--cadr-gap)) / var(--card-item));
+}
+
+.list_card-set {
+    @media screen and (max-width: 769px) {
+            margin: 0;
+            margin-left: 0;
+            gap: 30px;
+            flex-wrap: wrap;
+            
+        }
+        display: flex;
+        gap: var(--cadr-gap)
 }
