--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -67,6 +67,7 @@
                      margin-right: auto;
                      margin-bottom: 30px;
                      font-size: 44px;
+                
                      line-height: 1.36;
                      text-align: center;
                      letter-spacing: 0.06em;
@@ -78,7 +79,10 @@
                             line-height: 1.61;
                             
                         }
-
+@media screen and (min-width: 1200px) {
+ 
+    width: 696px;
+}
 // @media screen and (min-width: 696px) {
 //                             max-width: 696px;
 //                         }
